src/objects/Location__c.object
<CustomObject>
    <description>Tracks locations (Accounts) at which a Contact has a secondary presence</description>
    <fields>
        <fullName>Account_Site__c</fullName>
        <label>Account Site</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Other Contacts at this Location</relationshipLabel>
        <relationshipName>R00N20000000pU1jEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <description>The Contact Type at this location</description>
        <inlineHelpText>The Contact Type at this location</inlineHelpText>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental Clinic Contact</fullName>
                </value>
                <value>
                    <fullName>Dental Laboratory Contact</fullName>
                </value>
                <value>
                    <fullName>Distributor Contact</fullName>
                </value>
                <value>
                    <fullName>Hospital Contact</fullName>
                </value>
                <value>
                    <fullName>University Contact</fullName>
                </value>
                <value>
                    <fullName>Wholesaler Contact</fullName>
                </value>
                <value>
                    <fullName>Purchasing Group Contact</fullName>
                </value>
                <value>
                    <fullName>Government Contact</fullName>
                </value>
                <value>
                    <fullName>DENTSPLY SIRONA Contact</fullName>
                </value>
                <value>
                    <fullName>Competitor Contact</fullName>
                </value>
                <value>
                    <fullName>Other Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact&apos;s Other Locations</relationshipLabel>
        <relationshipName>R00N20000000pU1iEAE</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location_Account__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Location Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Movex__c</fullName>
        <label>Legacy Location Account ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Days__c</fullName>
        <label>Preferred Days</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mon</fullName>
                </value>
                <value>
                    <fullName>Tue</fullName>
                </value>
                <value>
                    <fullName>Wed</fullName>
                </value>
                <value>
                    <fullName>Thu</fullName>
                </value>
                <value>
                    <fullName>Fri</fullName>
                </value>
                <value>
                    <fullName>Sat</fullName>
                </value>
                <value>
                    <fullName>Sun</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Hours__c</fullName>
        <label>Preferred Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Area__c</fullName>
        <label>Product Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Profession__c</fullName>
        <label>Profession</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Area__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Anaesthetist</fullName>
                </value>
                <value>
                    <fullName>Cardiac surgeon</fullName>
                </value>
                <value>
                    <fullName>Continence Nurse/Urotherapist</fullName>
                </value>
                <value>
                    <fullName>Dental Technician</fullName>
                </value>
                <value>
                    <fullName>Denturist</fullName>
                </value>
                <value>
                    <fullName>Faculty/Instructor/Professor</fullName>
                </value>
                <value>
                    <fullName>General Dentist</fullName>
                </value>
                <value>
                    <fullName>General surgeon</fullName>
                </value>
                <value>
                    <fullName>Gynaecologist</fullName>
                </value>
                <value>
                    <fullName>Haematologist</fullName>
                </value>
                <value>
                    <fullName>Head Nurse</fullName>
                </value>
                <value>
                    <fullName>Head of Operating Theatre</fullName>
                </value>
                <value>
                    <fullName>Hygienist/Infection control</fullName>
                </value>
                <value>
                    <fullName>Infection Control Specialist</fullName>
                </value>
                <value>
                    <fullName>MS Specialist</fullName>
                </value>
                <value>
                    <fullName>Neurologist</fullName>
                </value>
                <value>
                    <fullName>Neuro surgeon</fullName>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                </value>
                <value>
                    <fullName>Oral Radiologist</fullName>
                </value>
                <value>
                    <fullName>Oral surgeon</fullName>
                </value>
                <value>
                    <fullName>Orthodontist</fullName>
                </value>
                <value>
                    <fullName>Orthopaedic surgeon</fullName>
                </value>
                <value>
                    <fullName>Other staff  Dental</fullName>
                </value>
                <value>
                    <fullName>Paediatrician</fullName>
                </value>
                <value>
                    <fullName>Perfusionist</fullName>
                </value>
                <value>
                    <fullName>Periodontist</fullName>
                </value>
                <value>
                    <fullName>Plastic surgeon</fullName>
                </value>
                <value>
                    <fullName>Post Graduate trainee</fullName>
                </value>
                <value>
                    <fullName>Proctologist/Colorectal surgeon</fullName>
                </value>
                <value>
                    <fullName>Prosthodontist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_CY_D__c</fullName>
        <formula>Account__r.TS_CY_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales CY (LCTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_LYTD_D__c</fullName>
        <formula>Account__r.TS_CY_1_TD_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales LYTD (LCTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_LY_D__c</fullName>
        <formula>Account__r.TS_CY_1_D_AllPLs_AllPCs_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales LY (LCTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_CY__c</fullName>
        <formula>Account__r.TQ_CY_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants CY (LCTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LYTD__c</fullName>
        <formula>Account__r.TQ_CY_1_TD_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants LYTD (LCTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Implants_LY__c</fullName>
        <formula>Account__r.TQ_CY_1_D_DI_Implants_AllBrands__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold Implants LY (LCTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Stock_Abuts_CY_LCTN__c</fullName>
        <formula>Account__r.TQ_CY_D_DI_StockAbuts_AllBrands__c</formula>
        <label>Sold Stock Abuts CY (LCTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Stock_Abuts_LYTD_LCTN__c</fullName>
        <formula>Account__r.TQ_CY_1_TD_D_DI_StockAbuts_AllBrands__c</formula>
        <label>Sold Stock Abuts LYTD (LCTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sold_Stock_Abuts_LY_LCTN__c</fullName>
        <formula>Account__r.TQ_CY_1_D_DI_StockAbuts_AllBrands__c</formula>
        <label>Sold Stock Abuts LY (LCTN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Contact_Type__c</fullName>
        <label>Sub Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Contact_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Brand Manager</fullName>
                </value>
                <value>
                    <fullName>Buyer/Procurement</fullName>
                </value>
                <value>
                    <fullName>Clinical Director</fullName>
                </value>
                <value>
                    <fullName>Clinical Manager</fullName>
                </value>
                <value>
                    <fullName>Clinical Tutor</fullName>
                </value>
                <value>
                    <fullName>Consultant</fullName>
                </value>
                <value>
                    <fullName>Dean</fullName>
                </value>
                <value>
                    <fullName>Dental Assistant</fullName>
                </value>
                <value>
                    <fullName>Dental Engineer</fullName>
                </value>
                <value>
                    <fullName>Dental Nurse Manager</fullName>
                </value>
                <value>
                    <fullName>Dental Student</fullName>
                </value>
                <value>
                    <fullName>Dental Technician</fullName>
                </value>
                <value>
                    <fullName>Dental Technician Master</fullName>
                </value>
                <value>
                    <fullName>Denturist</fullName>
                </value>
                <value>
                    <fullName>Department Head</fullName>
                </value>
                <value>
                    <fullName>Distributor Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Doctor</fullName>
                </value>
                <value>
                    <fullName>Endodontist</fullName>
                </value>
                <value>
                    <fullName>Faculty/Instructor/Professor</fullName>
                </value>
                <value>
                    <fullName>General Dentist</fullName>
                </value>
                <value>
                    <fullName>General Manager</fullName>
                </value>
                <value>
                    <fullName>General surgeon</fullName>
                </value>
                <value>
                    <fullName>Head Nurse</fullName>
                </value>
                <value>
                    <fullName>Head of Department</fullName>
                </value>
                <value>
                    <fullName>Head of Education</fullName>
                </value>
                <value>
                    <fullName>Head of Hospital</fullName>
                </value>
                <value>
                    <fullName>Hygiene Therapist</fullName>
                </value>
                <value>
                    <fullName>Hygienist</fullName>
                </value>
                <value>
                    <fullName>Implant Manager</fullName>
                </value>
                <value>
                    <fullName>Implantologist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>DEX</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Holland</fullName>
                </value>
                <value>
                    <fullName>HQ</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Kazakhstan</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Oman</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Portugal</fullName>
                </value>
                <value>
                    <fullName>Qatar</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>UAE</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                    <default>true</default>
                    <label>UK</label>
                </value>
                <value>
                    <fullName>Ukraine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>x10MyLocations</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Site__c</columns>
        <columns>Contact__c</columns>
        <columns>Product_Area__c</columns>
        <columns>Profession__c</columns>
        <filterScope>Everything</filterScope>
        <label>10. My Locations</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>x50AllLocations</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Site__c</columns>
        <columns>Contact__c</columns>
        <columns>Profession__c</columns>
        <columns>Product_Area__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>50. All Locations</label>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>LOC-{000000}</displayFormat>
        <label>Location #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <recordTypes>
        <fullName>Location</fullName>
        <active>true</active>
        <description>Secondary location for a Contact</description>
        <label>Location</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>UserCountry</fullName>
        <active>true</active>
        <description>make sure user selected proper country</description>
        <errorConditionFormula>AND(
CASE( $RecordType.Name,
&apos;Location (U)&apos;, &apos;true&apos;,
&apos;false&apos;) = &apos;true&apos;,
NOT(CONTAINS($Profile.Name, &apos;Administrator&apos;))
,
CASE( User_Country__c ,
&apos;Australia&apos;,&apos;Australia&apos;,
&apos;Austria&apos;,&apos;Austria&apos;,
&apos;Belgium&apos;,&apos;Belgium&apos;,
&apos;Canada&apos;,&apos;Canada&apos;,
&apos;Denmark&apos;,&apos;Denmark&apos;,
&apos;Finland&apos;,&apos;Finland&apos;,
&apos;France&apos;,&apos;France&apos;,
&apos;Germany&apos;,&apos;Germany&apos;,
&apos;Holland&apos;,&apos;Holland&apos;,
&apos;HQ&apos;,&apos;HQ&apos;,
&apos;Italy&apos;,&apos;Italy&apos;,
&apos;Luxembourg&apos;,&apos;Luxembourg&apos;,
&apos;New Zealand&apos;,&apos;New Zealand&apos;,
&apos;Norway&apos;,&apos;Norway&apos;,
&apos;Portugal&apos;,&apos;Portugal&apos;,
&apos;Spain&apos;,&apos;Spain&apos;,
&apos;Sweden&apos;,&apos;Sweden&apos;,
&apos;Sweden-HQ&apos;,&apos;Sweden-HQ&apos;,
&apos;Switzerland&apos;,&apos;Switzerland&apos;,
&apos;UK&apos;,&apos;UK&apos;,
&apos;USA&apos;,&apos;USA&apos;,
&apos;&apos;) &lt;&gt; CASE( $User.User_Country__c ,
&apos;Australia&apos;,&apos;Australia&apos;,
&apos;Austria&apos;,&apos;Austria&apos;,
&apos;Belgium&apos;,&apos;Belgium&apos;,
&apos;Canada&apos;,&apos;Canada&apos;,
&apos;Denmark&apos;,&apos;Denmark&apos;,
&apos;Finland&apos;,&apos;Finland&apos;,
&apos;France&apos;,&apos;France&apos;,
&apos;Germany&apos;,&apos;Germany&apos;,
&apos;Holland&apos;,&apos;Holland&apos;,
&apos;HQ&apos;,&apos;HQ&apos;,
&apos;Italy&apos;,&apos;Italy&apos;,
&apos;Luxembourg&apos;,&apos;Luxembourg&apos;,
&apos;New Zealand&apos;,&apos;New Zealand&apos;,
&apos;Norway&apos;,&apos;Norway&apos;,
&apos;Portugal&apos;,&apos;Portugal&apos;,
&apos;Spain&apos;,&apos;Spain&apos;,
&apos;Sweden&apos;,&apos;Sweden&apos;,
&apos;Sweden-HQ&apos;,&apos;Sweden-HQ&apos;,
&apos;Switzerland&apos;,&apos;Switzerland&apos;,
&apos;UK&apos;,&apos;UK&apos;,
&apos;USA&apos;,&apos;USA&apos;,
&apos;#dummy#&apos;)
)</errorConditionFormula>
        <errorDisplayField>User_Country__c</errorDisplayField>
        <errorMessage>Selected User Country does not correspond to your User profile</errorMessage>
    </validationRules>
</CustomObject>